--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ strong a {
   max-width: 90rem;
   margin: 0 auto;
   min-width: 20rem;
-  padding: 0.8rem;
+  padding: 2rem;
 }
 
 /* ==== Main Content Section */
@@ -294,7 +294,7 @@ span {
   border-color: red;
 }
 
-/* ==== MEdia Queries ==== */
+/* ==== Media Queries ==== */
 
 @media screen and (max-width: 54.625rem) {
   .main {
